# f1_pipeline

./: .coveragerc  .env.example  .gitignore  .markdownlint.json  LICENSE  Makefile  README.md  docker-compose-copy.txt  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/clickhouse/: init.sql  users.xml
dags/: ingestion_dag.py
docs/: architecture.md  f1_architecture_doc.md  f1_endpoint_strategy.md
docs/dev_docs/: architecture.md  fix_force_refresh_current_season.md
f1_dbt/: Dockerfile  README.md  dbt_project.yml  profiles.yml
f1_dbt/macros/: create_db.sql
f1_dbt/models/bronze/: _sources.yml  test.sql
f1_dbt/models/bronze/base/: base_seasons.sql
f1_dbt/models/staging/: test.sql
ingestion/: ingestor.py  storage.py
minio/data/.minio.sys/tmp/.trash/65b0554f-e49b-404e-8e82-659745836c3f/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/71458e46-7b34-40d0-9da7-2fa6ab7243ce/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/7e9c96d0-3763-4bb7-8273-ec23a08505c0/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/ab189af9-db18-4af3-9d96-3bf24b9a7e2f/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/b773e8ab-d71b-4dc1-a956-b5ea9b11b62f/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/bf3acf3e-aa9b-42b4-b77f-d3b4e4a07ec7/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/bf51eec5-5c59-47d0-9ab1-f5fcf6ea0fc3/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/d6863f2e-321c-47a4-b697-9f3ecd60bab6/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/f316220c-8b38-4e3b-919e-b277e5b18dcd/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/f9e0d931-0cae-48e7-8a49-95618baa01a1/: xl.meta.bkp
src/: backfill.py
src/f1_data/: config.py
src/f1_data/analytics/: ddl.sql  loader.py
src/f1_data/backfill/: backfill.py  concurrent_backfill.py
src/f1_data/ingestion/: __init__.py  backfill.py  concurrent_ingestor.py  config.py  http_client.py  ingestor.py  object_store.py
src/f1_data/minio/: init_storage.py  object_store.py
src/f1_data/transform/: schemas2.py  silver.py
src/f1_data/trasform/: schemas.py
src/f1_pipeline/: __init__.py  config.py  exceptions.py
src/f1_pipeline/backfill/: backfill.py  concurrent_backfill.py
src/f1_pipeline/ingestion/: __init__.py  http_client.py  ingestor.py
src/f1_pipeline/minio/: init_storage.py  object_store.py
src/f1_pipeline/transform/: base.py  factory.py  run.py  schemas.py
tests/: conftest.py  docker_cmd_run.txt
tests/integration/: manual_test_ingestion.py
tests/samples/: circuits.json  constructor.json  constructor_standing.json  driver.json  driver_standing.json  laps.json  pitstops.json  qualifying.json  races.json  results.json  season.json  sprint.json  status.json
tests/unit/: test_config.py  test_http_client.py  test_ingestor.py  test_loader.py  test_object_store.py  test_silver.py  test_transform.py
