[project]
name = "f1-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==2.26.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "boto3==1.41.5",
    "botocore==1.41.5",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "clickhouse-connect>=0.10.0",
    "cramjam==2.11.0",
    "dbt-clickhouse>=1.9.8",
    "dbt-core>=1.11.2",
    "fastparquet==2025.12.0",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "idna==3.11",
    "jmespath==1.0.1",
    "logger==1.4",
    "multidict==6.7.0",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pendulum==3.1.0",
    "pip>=25.3",
    "polars>=1.37.1",
    "propcache==0.4.1",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyrate-limiter==2.10.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "requests-ratelimiter==0.7.0",
    "s3fs==2025.12.0",
    "s3transfer==0.15.0",
    "six==1.17.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "wrapt==1.17.3",
    "yarl==1.22.0",
]

[tool.uv.sources]
f1-pipeline = { path = ".", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.42.19",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/f1_pipeline"]
